// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<img
  alt="Logo"
  class="sc-bwzfXH gBgnSi"
  style="padding-right: 10px;"
/>
`;

exports[`<SplashScreen /> should render and match the snapshot 1`] = `
<div
  class="sc-bdVaJa eBKgUB"
>
  <img
    alt="Logo"
    class="sc-bwzfXH gBgnSi"
    src="IMAGE_MOCK"
    style="padding-right: 10px;"
  />
  <img
    alt="Logo"
    class="sc-bwzfXH gBgnSi"
    src="IMAGE_MOCK"
    style="padding-right: 10px;"
  />
</div>
`;
